fixed css centering w/align-items: center;

--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .app-container {
@@ -14,6 +15,7 @@ body {
   min-width: 340px;
   display: flex;
   flex-direction: column;
+
   border: 5px solid black;
   background: lightgrey;
 }
